ArgoCD GitOps/URL Shortner + MongoDB/deployments/backend-url-shortning-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-url-shortening-ingress
  labels:
    name: backend-url-shortening-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: url-shortner.domain.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: url-shortening-svc
            port: 
              number: 80
